--- a/unidad-3/tarea-2/calculadora1.css
+++ b/unidad-3/tarea-2/calculadora1.css
@@ -2,20 +2,53 @@ body{
     background-color: aqua;
 }
 form{
-    background-color: antiquewhite;
-    width: 50%;
-    padding: 2% 4% 2%;
-    border: 2px solid black;
-    border-radius: 100px;
-}
-#cajas, #botones{
-    border-radius: 50px;
-    background-color: white;
-    border: 2px solid black;
-    padding: 1%;
-    width: 60%;
     margin: 0 auto;
+    background-color: #3E4238;
+    width: 25%;
+    padding: 1% 2%;
+    border: 2px solid black;
+    border-radius: 10px;
 }
-#botones{
-    width: 30%;
+button{
+    margin-left: -5px;
+    border: 2px solid turquoise;
+    font-size: 20px;
+    padding: 3% 5% 3%;
+    background-color: turquoise;
+}
+#sumar{
+    border-radius: 5px 0px 0px 5px;
+}
+#residuo{
+    border-radius: 0px 5px 5px 0px;
+}
+/*#botones{
+    align-items: center;
+    background-color: turquoise;
+    width: 60%;
+}*/
+#numero1, #numero2{
+    text-align: right;
+    font-size: 20px;
+    background-color: #D6FF7E;
+    border: 2px solid #D6FF7E;
+    color: black;
+    margin-top: 1%;
+    width: 84%;
+    padding: 3% 8% 3%;
+    border-radius: 5px;
+}
+#resultado{
+    margin-bottom: 3%;
+    background-color: white;
+    border: 2px solid white;
+    text-align: right;
+    font-size: 20px;
+    width: 84%;
+    padding: 4% 8% 4%;
+    border-radius: 5px;
+}
+#lblResultado{
+    font-size: 20px;
+    color: white;
 }
